Fix persistencia